# Programming-Locker

./: .cache.pygopherd.dir  .gitignore  Comandos Docker.sh  Comandos Linux  Comandos Linux.sh  Docker Pi Zero W  Docker Pi Zero W.sh  Dockerfile  Fedora_base.sh  IPs.php  Instalar _Docker_en_Raspbian  Instalar _Docker_en_Raspbian.sh  MongoDB.sh  README.md  USB_rasp  USB_rasp.sh  debian_base.sh  debian_data_science  g  readme.txt  wpa_supplicant.conf
AWS/: SNS_message.py
Angular/: .cache.pygopherd.dir  install.sh
Arduino/: .cache.pygopherd.dir  Button.ino  CO2_oled.ino  HelloWorld.ino  LED.ino  Matrix_led.ino
Bash/: .cache.pygopherd.dir  covid_spain_scrap.sh
Colab/: .cache.pygopherd.dir  ssh.py  ssh_Colab.md
Docker/: .cache.pygopherd.dir  Docker_images.sh  mysql_pi_apache_python.yml  remover.sh  tensorflow
Dotfiles/: tmux.conf  vimrc
Firebase/: deploy.sh  install.sh
Java/: helloworld.java  install.sh
JavaScript/: api.js  asyncAwait.js
Kubernetes/: config.yml  install.sh  usage.sh
LAMP/: Apache.sh  CssPractice.html  HiraganaChart.sql  MySQLexamples.sql  basic.sql  data.sh  index.html  kanji.php  mariadb.sql
Linux/: Arch.sh  Artix.md  Comandos Linux.md  Comandos Linux.sh  Fedora32.md  Fedora_base.sh  Japanese.sh  Manjaro.sh  ReverseShell.sh  debian_base.sh  iterm.md
Python/: Enter_to_continue  Json_file_creator.py  Real_time_browser.py  Save_output_os_command.py  Serve_files.py  flask_cors.py  know_my_system.py  virtualenv.sh  (+1 more)
TESTS/RUST/rusty-chess/: Cargo.toml  README.md  index.html
TESTS/RUST/rusty-chess/src/: board.rs  main.rs  piece.rs
(+723 files in other folders)
