[package]
name = "chess-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]